--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ a:visited{
     background-color: rgb(242, 246, 218);
     /* transform: translateY(20px); */
 }
-@keyframes pop {
+/* @keyframes pop {
     from{top: 45%;}
     to{ top: 35%;}
     
-}
+} */
 #addbtn {
     background-color: green;
 }
